--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,30 +1,91 @@
 body {
-    background: teal;
+    background: #AAA;
 }
 
-.wrap {
+body > .wrap {
+    position: relative;
     display: flex;
-    width: 90%;
-    margin: 0 auto;
+}
+
+.sidebar-wrapper {
+    min-width: 380px;
+    height: 100vh;
 }
 
 .sidebar {
     position: fixed;
-    width: 35%;
-    height: 100vh;
-    padding: 20px;
+    top: 0;
+    left: 0;
+    width: 380px;
+    height: inherit;
+    padding: 30px;
     color: white;
-    text-align: center;
+    background: #007070;
+    border-left: 30px solid #004040;
 }
 
 .sidebar header h1 {
     margin-bottom: 0;
-    font-size: 4vw;
+    font-size: 4em;
+}
+
+.sidebar header h1 .sharp {
+    color: #003030;
+}
+
+.sidebar header h1 .salt {
+    color: #CCF0F0;
+    border-bottom: 4px solid rgba(255,255,255,0.2);
+}
+
+.sidebar header h1 a {
+    color: white;
+}
+
+.sidebar header h1 a:hover .sharp {
+    color: #f54f41;
+}
+
+.sidebar header h1 a:hover .salt {
+    border-bottom-color: #f54f41;
 }
 
 .sidebar header h2 {
+    margin-top: 10px;
+    padding-left: 31px;
+    font-size: 1.2em;
+    font-weight: normal;
+}
+
+.sidebar nav {
+    margin-top: 40px;
+}
+
+.sidebar .vertical.menu {
+    background: #003030;
+    width: 100%;
+}
+
+.sidebar .vertical.menu .item::before {
+    background: rgba(0,0,0,0.3);
+}
+
+.sidebar .vertical.menu .item:hover {
+    background: #002020;
+}
+
+.sidebar .vertical.menu .item:hover p {
+    color: #f54f41;
+}
+
+.sidebar .menu .item h4 {
+    color: white;
     margin-top: 0;
-    font-size: 1.5vw;
+    margin-bottom: 0.4em;
+}
+
+.sidebar .menu .item p {
+    color: #00E9E9;
 }
 
 .sidebar footer {
@@ -38,23 +99,43 @@ body {
 
 main {
     width: 100%;
-    margin-left: 35%;
-    padding: 40px 0;
+    max-width: 1000px;
+    padding: 50px;
     background: #EEE;
 }
 
-main .ui.table {
-    width: 70%;
+main > .wrap {
+    width: 90%;
+    max-width: 600px;
     margin-top: 20px;
     margin-left: auto;
     margin-right: auto;
 }
 
-main .ui.table .winner-1 {
+main .ui.table .icon img {
+    width: 32px;
+    height: 32px;
+}
+
+main .ui.table .icon.winner-0 img {
+    opacity: 0.5;
+}
+
+main .ui.table .name.winner-1 {
     font-weight: bold;
-    color: teal;
+    color: #f54f41;
 }
 
 main .title {
     text-align: center;
+}
+
+.ui.button {
+    background: #f54f41;
+    color: white;
+}
+
+.ui.button:hover {
+    background: #e34022;
+    color: white;
 }
